# LambdaEngine

./: CMakeLists.txt  DESIGN  DESIGN2  HOWTO  LICENSE  MAPS  Makefile  README.md  TODO  render_design
def_format/: def_format.c  def_format.h
engine/: globals.c  globals.h  l_ingame.c  l_ingame.h  l_loadscreen.c  l_loadscreen.h  l_main.c  l_mainmenu.c  l_mainmenu.h  l_splash.c  l_splash.h  l_state.h  lib_cache.c  lib_cache.h  lib_tools.c  lib_tools.h  license-header  vfs_cache.c  vfs_cache.h  vfs_init.c  vfs_init.h  vfs_io.c  vfs_io.h  vfs_pak.c  vfs_pak.h
fonts/: LICENSE
include/: lambda_api.h  lambda_state.h
lambda_input/: i_init.c
lambda_render/: r_init.c  r_primitives.c
lambda_video/: README  v_init.c
sample/: gameinfo.def  readme.txt
sample/maps/map01/: mapinfo.def
soil/: SOIL.c
textures/: LICENSE  bg_tex.tga  logo.tga
tools/: build_md5sums.sh
tools/lambdacut/: lambdacut.c
tools/lambdaextractcol/: lambdaextractcol.c
tools/lambdaextractent/: lambdaextractent.c
tools/lambdamc/: README  lambdamc.c
